HelloUltraviolet/Fixtures/RejectedSource/Statements/VarAnnotationMismatch/Source/Main.uv
//! Rejected statement specimen for var annotation checking mirroring let.

public procedure varAnnotationMismatchReference() -> i32 {
    var value: i32 = true
    return value
}
